js + responsive card

--- a/index.html
+++ b/index.html
@@ -60,117 +60,72 @@
     </nav>
 
     <div class="main"></div>
-
-    <!-- <div class="row">
-      <div class="filmCard d-flex flex-column col-2">
-        <img src="./assets/1.png" alt="film-img" class="w-100" />
-        <div class="filmInfo">
-          <div class="filmButtons d-flex justify-content-between">
-            <div class="mainIcons">
-              <ion-icon name="play" id="play"></ion-icon>
-              <ion-icon name="add"></ion-icon>
-              <ion-icon name="thumbs-up"></ion-icon>
-            </div>
-            <ion-icon name="chevron-down"></ion-icon>
-          </div>
-          <div class="filmDescription d-flex align-items-center gap-3">
-            <p class="filmTitle m-0">Titolo</p>
-            <p class="filmLenght m-0">148min</p>
-          </div>
-          <div class="genre">Fantasy</div>
-        </div>
-      </div>
-      <div class="filmCard d-flex flex-column col-2">
-        <img src="./assets/1.png" alt="film-img" class="w-100" />
-        <div class="filmInfo">
-          <div class="filmButtons d-flex justify-content-between">
-            <div class="mainIcons">
-              <ion-icon name="play" id="play"></ion-icon>
-              <ion-icon name="add"></ion-icon>
-              <ion-icon name="thumbs-up"></ion-icon>
-            </div>
-            <ion-icon name="chevron-down"></ion-icon>
-          </div>
-          <div class="filmDescription d-flex align-items-center gap-3">
-            <p class="filmTitle m-0">Titolo</p>
-            <p class="filmLenght m-0">148min</p>
-          </div>
-          <div class="genre">Fantasy</div>
-        </div>
-      </div>
-      <div class="filmCard d-flex flex-column col-2">
-        <img src="./assets/1.png" alt="film-img" class="w-100" />
-        <div class="filmInfo">
-          <div class="filmButtons d-flex justify-content-between">
-            <div class="mainIcons">
-              <ion-icon name="play" id="play"></ion-icon>
-              <ion-icon name="add"></ion-icon>
-              <ion-icon name="thumbs-up"></ion-icon>
-            </div>
-            <ion-icon name="chevron-down"></ion-icon>
-          </div>
-          <div class="filmDescription d-flex align-items-center gap-3">
-            <p class="filmTitle m-0">Titolo</p>
-            <p class="filmLenght m-0">148min</p>
-          </div>
-          <div class="genre">Fantasy</div>
-        </div>
-      </div>
-      <div class="filmCard d-flex flex-column col-2">
-        <img src="./assets/1.png" alt="film-img" class="w-100" />
-        <div class="filmInfo">
-          <div class="filmButtons d-flex justify-content-between">
-            <div class="mainIcons">
-              <ion-icon name="play" id="play"></ion-icon>
-              <ion-icon name="add"></ion-icon>
-              <ion-icon name="thumbs-up"></ion-icon>
-            </div>
-            <ion-icon name="chevron-down"></ion-icon>
-          </div>
-          <div class="filmDescription d-flex align-items-center gap-3">
-            <p class="filmTitle m-0">Titolo</p>
-            <p class="filmLenght m-0">148min</p>
-          </div>
-          <div class="genre">Fantasy</div>
-        </div>
-      </div>
-      <div class="filmCard d-flex flex-column col-2">
-        <img src="./assets/1.png" alt="film-img" class="w-100" />
-        <div class="filmInfo">
-          <div class="filmButtons d-flex justify-content-between">
-            <div class="mainIcons">
-              <ion-icon name="play" id="play"></ion-icon>
-              <ion-icon name="add"></ion-icon>
-              <ion-icon name="thumbs-up"></ion-icon>
-            </div>
-            <ion-icon name="chevron-down"></ion-icon>
-          </div>
-          <div class="filmDescription d-flex align-items-center gap-3">
-            <p class="filmTitle m-0">Titolo</p>
-            <p class="filmLenght m-0">148min</p>
-          </div>
-          <div class="genre">Fantasy</div>
-        </div>
-      </div>
-      <div class="filmCard d-flex flex-column col-2">
-        <img src="./assets/1.png" alt="film-img" class="w-100" />
-        <div class="filmInfo">
-          <div class="filmButtons d-flex justify-content-between">
-            <div class="mainIcons">
-              <ion-icon name="play" id="play"></ion-icon>
-              <ion-icon name="add"></ion-icon>
-              <ion-icon name="thumbs-up"></ion-icon>
-            </div>
-            <ion-icon name="chevron-down"></ion-icon>
-          </div>
-          <div class="filmDescription d-flex align-items-center gap-3">
-            <p class="filmTitle m-0">Titolo</p>
-            <p class="filmLenght m-0">148min</p>
-          </div>
-          <div class="genre">Fantasy</div>
-        </div>
-      </div>
-    </div> -->
+    <h2>Trending Now</h2>
+    <div id="carousel1" class="carousel slide">
+      <div class="carousel-inner"></div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carousel1"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carousel1"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <h2>Watch It Again</h2>
+    <div id="carousel2" class="carousel slide">
+      <div class="carousel-inner"></div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carousel2"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carousel2"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <h2>New Releases</h2>
+    <div id="carousel3" class="carousel slide">
+      <div class="carousel-inner"></div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carousel3"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carousel3"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
     <script
       type="module"
