--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div class="navContainer navBackground fixed-top">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <img
@@ -34,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" onclick="showHome()">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">TV Shows</a>
@@ -58,9 +59,11 @@
         </div>
       </div>
     </nav>
+  </div>
 
-    <div class="main"></div>
-    <div class="jumbotron d-flex justify-content-between align-items-center">
+    <div
+      class="jumbotron d-flex justify-content-between align-items-center mb-3"
+    >
       <div class="jumboMain d-flex align-items-center gap-5">
         <h1>TV Shows</h1>
         <div class="dropdown">
@@ -73,9 +76,15 @@
             Genres
           </button>
           <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Comedy</a></li>
+            <li><a class="dropdown-item" href="#">Science Fiction</a></li>
+            <li><a class="dropdown-item" href="#">Drama</a></li>
+            <li><a class="dropdown-item" href="#">War</a></li>
+            <li><a class="dropdown-item" href="#">Thriller</a></li>
+            <li><a class="dropdown-item" href="#">Fantasy</a></li>
+            <li><a class="dropdown-item" href="#">Crime</a></li>
+            <li><a class="dropdown-item" href="#">Adventure</a></li>
             <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </div>
       </div>
@@ -84,71 +93,76 @@
         <ion-icon name="grid"></ion-icon>
       </div>
     </div>
-    <h3>Trending Now</h3>
-    <div id="carousel1" class="carousel slide">
-      <div class="carousel-inner"></div>
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#carousel1"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#carousel1"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-    <h3>Watch It Again</h3>
-    <div id="carousel2" class="carousel slide">
-      <div class="carousel-inner"></div>
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#carousel2"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#carousel2"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-    <h3>New Releases</h3>
-    <div id="carousel3" class="carousel slide">
-      <div class="carousel-inner"></div>
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#carousel3"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#carousel3"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+
+    <div class="mainSearch d-none"></div>
+
+    <div class="main">
+      <h3>Trending Now</h3>
+      <div id="carousel1" class="carousel slide mb-5">
+        <div class="carousel-inner"></div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carousel1"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carousel1"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <h3>Watch It Again</h3>
+      <div id="carousel2" class="carousel slide mb-5">
+        <div class="carousel-inner"></div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carousel2"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carousel2"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <h3>New Releases</h3>
+      <div id="carousel3" class="carousel slide mb-5">
+        <div class="carousel-inner"></div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carousel3"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carousel3"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
 
     <footer class="d-flex flex-column align-items-start gap-3">
